# lisaem

./: .gitignore  BUGS.txt  ChangeLog  LICENSE  LICENSE.txt  Makefile  README  README-for-release.md  README.md  build.sh  configure  configure.in
bashbuild/: CYGWIN.sys  Darwin.sys  FreeBSD.sys  Linux.sys  OpenBSD.sys  README.md  SunOS.sys  Windows.sys  buildphase.fn  builtby.fn  cc-strip-upx.sh  checkdirs.fn  clean.fn  colors.fn  compilequeue.fn  create_machine_h.fn  image.fn  interim-build.sh  packages.fn  post-wx-config.fn  pre-00-warnings.fn  pre-atexit.fn  progressbar.fn  save-restore-env.fn  src.build  upxcmd.sh
pkg/: README.txt
pkg/templates/: README.txt
pkg/templates/appimage/: lisaem.x
pkg/templates/freebsd-ports/: README.txt
pkg/templates/openbsd-ports/: README.txt
resources/: BLU090.dc42.c  Info.plist  LisaEm.icns  bin2c.c  defaultlisaskin.conf  lisa2icon.xpm  lisaem.desktop  lisaem.exe.Manifest  lisaem.ico.old  lisaem.sh  wavs.c  windres_private.rc
resources/alt-icons/: Read Me First.txt
resources/skins/default/: default.conf
scripts/: README.md  add-interim-build-links-to-all-dirs.sh  build-wx3.0.2-elder-macosx.sh  build-wx3.1.2-cygwin-windows.sh  build-wx3.1.2-gtk.sh  build-wx3.1.2-modern-macosx.sh  build-wx3.1.4-gtk.sh  build-wx3.1.4-modern-macosx.sh  build-wx3.1.5-cygwin-windows.sh  build-wx3.1.5-gtk.sh  build-wx3.1.5-modern-macosx.sh  build-wx3.1.6-gtk.sh  build-wx3.2.0-gtk.sh  build-wx3.2.1-gtk.sh  build-wxwidgets-gtk.sh  clean-lisaem-prefs-macosx.sh  cygwin-install32.bat  cygwin-install64.bat  download-and-prepare-wxwidgets-windows-gcc730.sh  make-obsd-port-distfile  tr1-type-traits-fix-snip.txt  wx-build-3.0.5-macos-10.5.sh  wx-strvararg.patch
share/: README
src/: README  get-uintX-types.c  machine.h  strcasestr.c
src/host/: README  lisaem_static_resources.cpp
src/host/wxui/: LisaConfig.cpp  LisaConfigFrame.cpp  LisaEmSoundOpenAL.cpp  LisaEmSoundWx.cpp  LisaSkin.cpp  LisaVKB.cpp  lisaem_fortunes.cpp  lisaem_wx.cpp  lisaem_wx.cpp.bak.20210824  z8530-terminal.cpp
src/host/wxui/include/: LisaConfig.h  LisaConfigFrame.h  LisaEmSoundOpenAL.h  LisaSkin.h  LisaVKB.h  terminalwx_frame.h
src/include/: built_by.h  byteswap.h  cops.h  extra-defines.h  extrablue.h  fliflo_queue.hpp  floppy.h  icon_bitmap.h  keyscan.h  lisa_cpp_configs.h  lisaem_static_resources.h  lisaemframe.h  lisawin.h  mem68k.h  mmu.h  ui.h  unglobals.h  vars.h  z8530_structs.h
src/include/bits/: byteswap.h
src/lib/TerminalWx/: TestMain.cpp  TestMain.h  bashbuild  build.sh
src/lib/TerminalWx/lib/: README.md
src/lib/TerminalWx/src/: terminalinputevent.cpp  terminalwx.cpp
src/lib/libGenerator/: AUTHORS  LICENSE  README  build.sh
src/lib/libGenerator/cpu68k/: def68k-iibs.h  def68k.c  def68k.def  gen68k.c  slot.9304.5.sh  tab68k.c
src/lib/libGenerator/generator/: AUTHORS  ChangeLog  README  cpu68k.c  diss68k.c  (+3 more)
src/lib/libdc42/: README.md  build.sh  lisafsh-tool.c
src/lisa/cpu_board/: cpucoretester.c  cpucoretester.c.backup  irq.c  memory.c  mmu.c  rom.c  romless.c
src/lisa/expansion_slots/: readme.txt
src/lisa/floppy/: README
src/lisa/io_board/: cops.c  floppy.c  via6522.c  z8530-pty.c  z8530-telnetd.c  z8530-tty.c  z8530.c  zilog8530.c
src/lisa/keyboard/: build.sh
src/lisa/motherboard/: README  fliflo_queue.c  glue.c  los-error-codes.c  symbols.c  unvars.c  vars.c
src/lisa/power_supply/: power-supply.txt
src/lisa/video_board/: placeholder.txt
src/printer/: build.sh
src/printer/imagewriter/: imagewriter-wx.cpp
src/storage/: hle.c  profile.c  widget.c
src/tools/: README.md  bashbuild  build.sh  machine.h  resources
src/tools/include/: libdc42.h  xenpatch.h
src/tools/src/: IDEFileToDC42-README.txt  blu-to-dc42.c  dc42-add-tags.c  dc42-bootblock-checksum.c  dc42-checksum.c  dc42-copy-boot-loader.c  dc42-copy-selected-sectors.c  dc42-diff.c  dc42-dumper.c  dc42-resize-to-400k.c  dc42-to-blu.c  dc42-to-raw.c  dc42-to-rraw.c  dc42-to-split-raw.c  dc42-to-tar.c  decode-vsrom.c  dumper.c  get-uintX-types.c  idefile-to-dc42.c  lisa-serial-info.c  lisadiskinfo.c  lisafsh-tool.c  los-bozo-on.c  los-depassword.x  los-deserialize.c  losdeserialize.c  mkvsrom.c  patchxenix.c  raw-to-dc42.c  rraw-to-dc42.c  uniplus-bootloader-deserialize.c  uniplus-set-profile-size.c
(+56 files in other folders)
